[package]
name = "solana-todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rate-limiter = "0.1.1"
actix-web = "4.9.0"
base64 = "0.22.1"
borsh = "1.5.5"
bs58 = "0.5.1"
chrono = "0.4.40"
dirs = "6.0.0"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
log = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.2.1"
solana-program = "2.2.1"
solana-sdk = "2.2.1"
swagger = "6.5.0"
task = "0.0.1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
validator = "0.20.0"

